--- a/AppNomesBr.Service/AppNomesBr.Service.csproj
+++ b/AppNomesBr.Service/AppNomesBr.Service.csproj
@@ -19,5 +19,8 @@
   <ItemGroup>
     <ProjectReference Include="..\AppNomesBr.Domain\AppNomesBr.Domain.csproj" />
   </ItemGroup>
-
+	
+	<ItemGroup>
+		<PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
+	</ItemGroup>
 </Project>
